tooling/nargo_cli/tests/snapshots/execution_success/array_rc_regression_7842/execute__tests__force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "429179333223782527",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7WSwQ7CIAyGwWEUZzw4H6TLMNvRgy/SuPAce3R3+BsaYrwATUhpSr72L7UmmYV3psAE8oD38AeV7/bzQkxlNvqsbk3+QiH4H/oq9j95MG0bPgm/0fzpBM57S3ytReqe99Or+9Wk/WilX/6vpf7hj+YeWm8qln1yW/1+5oVI+ujAP4Kfm1N5/X5AfFF6xLuCPuPMY5w48pPXNXz4nvFNNrcvgErvAJkEAAA=",
  "debug_symbols": "XYzBCoAgEET/Zc8dErrUr0SE2iYLomIahOy/p9AhvAy8ecwUOFBls5M7/QXLWsB6LRN5V6nwACqStWT2rr5lJKksfnhmp382PQG7fYhe45EjtqfmYGwhaq5iGsS8MfPGLw==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
